# ScienceLabX

./: README.md  pyproject.toml
sciencelabx/: __init__.py  tempCodeRunnerFile.py
sciencelabx/analysis/: __init__.py  descriptive.py  inferential.py
sciencelabx/data/: __init__.py
sciencelabx/datasets/: Cocoa_Bubbles_Investment_Nigeria_Ghana_1980_2023.xlsx  __init__.py
tests/: test1.py
